# FQ-HLL-Bot

./: CMakeLists.txt  README.md
src/: main.cpp
src/env_parser/: env_parser.cpp  env_parser.h
src/utils/: utils.cpp  utils.h
